--- a/SDA_2018_Assign2MatthewFader2/app/src/main/res/values/strings.xml
+++ b/SDA_2018_Assign2MatthewFader2/app/src/main/res/values/strings.xml
@@ -5,4 +5,8 @@
     <string name="activity_main.button3">Explicit Intent: Call an Activity</string>
     <string name="activity_main.button4">Blank:Blank:Blank:Blank:Blank</string>
     <string name="activity_main.button5">Send</string>
+
+    <string name="activity_main2.textView0">Email</string>
+    <string name="activity_main2.textView1">Subject</string>
+    <string name="activity_main2.textView2">Compose</string>
 </resources>
